--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!DOCTYPE html >
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
     <title>Netflix</title>
     <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
   </head>
